--- a/browser/js/cart/cart.html
+++ b/browser/js/cart/cart.html
@@ -30,7 +30,7 @@
     <!-- Cart MetaData -->
     Total Amount Chargeable: ${{ totalPrice }}
     <br>
-    <button type="submit" class="btn btn-success" ng-click="checkout()">Checkout</button>
+    <button type="submit" class="btn btn-success" ng-hide="emptyCart" ng-click="checkout()">Checkout</button>
   </div>
   <div class="col-xs-10 col-xs-offset-1 footer">
   </div>
